TabLayout sincronizado com viewPager, com todos os fragments.

--- a/app/src/main/res/layout/fragment_drinks.xml
+++ b/app/src/main/res/layout/fragment_drinks.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.MarketplaceFragment">
+    tools:context=".fragments.DrinksFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:gravity="center"
-        android:textSize="26sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/marketplaces" />
+        android:gravity="center"
+        android:text="@string/drinks"
+        android:textSize="26sp" />
 
 </FrameLayout>
