--- a/app/src/main/res/layout/banner_item.xml
+++ b/app/src/main/res/layout/banner_item.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.imageview.ShapeableImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/img_banner"
-    android:layout_width="match_parent"
+    android:layout_width="350dp"
     android:layout_height="200dp"
     android:scaleType="centerCrop"
-    android:paddingHorizontal="12dp"/>
+    app:shapeAppearanceOverlay="@style/rounded"
+    android:paddingHorizontal="8dp" />
